fixed collapsing nav bar in the media query

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -5,6 +5,7 @@ nav {
 main {
   outline: 1px solid yellow;
   position: relative;
+  height: 100%;
 }
 
 /*.pull-right {
